@@ -41,3 +41,8 @@ Features
 - The static view machinery now raises (rather than returns) ``HTTPNotFound``
   and ``HTTPMovedPermanently`` exceptions, so these can be caught by the
   NotFound view (and other exception views).
+
+- The mako renderer now accepts a def name and returns the template def 
+  result for the view being called. The uri format using an asset spec is 
+  package:path/to/template#defname.mako. The old way of returning a tuple 
+  from the view is supported for backward compatibility, ('defname', {}).
